fix: Not showing collection on cards

--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -3,7 +3,7 @@
     background: theme('background-color');
   }
   .keen-slider {
-    padding-bottom: 16px;
+    margin-bottom: 16px;
     overflow: visible !important;
   }
 
